<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.EdicionLugarActivity">

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <TextView
        android:id="@+id/txtTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTipo"
        app:layout_constraintStart_toStartOf="@+id/editNombre"
        app:layout_constraintTop_toBottomOf="@+id/editNombre" />

    <TextView
        android:id="@+id/txtDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDireccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTipo" />

    <TextView
        android:id="@+id/txtUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtUrl"
        app:layout_constraintStart_toStartOf="@+id/txtTelefono"
        app:layout_constraintTop_toBottomOf="@+id/editTelefono" />

    <TextView
        android:id="@+id/txtComentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtComentario"
        app:layout_constraintStart_toStartOf="@+id/editUrl"
        app:layout_constraintTop_toBottomOf="@+id/editUrl" />

    <TextView
        android:id="@+id/txtTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTelefono"
        app:layout_constraintStart_toStartOf="@+id/editDireccion"
        app:layout_constraintTop_toBottomOf="@+id/editDireccion" />

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editNombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtNombre"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/editDireccion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editDireccion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDireccion" />

    <EditText
        android:id="@+id/editTelefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTelefono"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtTelefono"
        app:layout_constraintTop_toBottomOf="@+id/editDireccion" />

    <EditText
        android:id="@+id/editUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editUrl"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtUrl"
        app:layout_constraintTop_toBottomOf="@+id/txtUrl" />

    <EditText
        android:id="@+id/editComentario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editComentario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtComentario"
        app:layout_constraintTop_toBottomOf="@+id/txtComentario" />

    <Spinner
        android:id="@+id/spinnerTipo"
        android:layout_width="81dp"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="@+id/txtTipo"
        app:layout_constraintTop_toBottomOf="@+id/txtTipo" />
</androidx.constraintlayout.widget.ConstraintLayout>